<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:onClick="goBack"
            android:src="@drawable/ic_action_back" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mygrad"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caps"
            android:inputType="numberDecimal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/belts"
            android:inputType="numberDecimal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/watches"
            android:inputType="numberDecimal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sunglasses"
            android:inputType="numberDecimal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNo"
            android:inputType="phone" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill" />
    </LinearLayout>
</LinearLayout>